syntax = "proto3";

package eventforwarder;

service StatusService {
  rpc SendStatus(Room) returns (Response) {}
}

message Status {
  string status = 1;
}

message Room {
  string game = 1;
  string roomId = 2;
  string roomType = 3;
  Status status = 4;
}

message Response {
  string message = 1;
}
